# AGENT

./: .gitignore  Dockerfile  PLAN.md  README.md  SourceDoc.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
client/: Dockerfile  client.py
src/: __init__.py  main.py
tests/: __init__.py  test_client.py  test_compose.py  test_main.py
